Добавить логику добавление/удаления лайков у фильмов, логику получения популярных фильмов